Switched to course website

--- a/Introductions/image_edit.html
+++ b/Introductions/image_edit.html
@@ -27,8 +27,8 @@
             <div class="navigation_bar_content">
                 <ul>
                     <li><a href="../index.html">Home Page</a></li>
-                    <li><a href="hobby.html">Interests</a></li>
-                    <!-- <li><a href="courses.html">Courses</a></li> -->
+                    <!-- <li><a href="hobby.html">Interests</a></li> -->
+                    <li><a href="courses.html">Courses</a></li>
                     <li><a href="image_edit.html">Image Editor</a></li>
                 </ul>
             </div>
