--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Josh Geden">
-    <title>CompSci 290, Spring 2021 : Introductions Project</title>
+    <title>Home Page: Josh Geden</title>
     <!-- scale page to fit entire screen, so it properly fills non-desktop devices -->    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- DEV-only for easier refreshing: stop the web browser from ever caching this page or its images -->
@@ -24,8 +24,8 @@
             <div class="navigation_bar_content">
                 <ul>
                     <li><a href="index.html">Home Page</a></li>
-                    <li><a href="Introductions/hobby.html">Interests</a></li>
-                    <!-- <li><a href="Introductions/courses.html">Courses</a></li> -->
+                    <!-- <li><a href="Introductions/hobby.html">Interests</a></li> -->
+                    <li><a href="Introductions/courses.html">Courses</a></li>
                     <li><a href="Introductions/image_edit.html">Image Editor</a></li>
                 </ul>
             </div>
